--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.css">
     <link rel="stylesheet" href="style.css">
     <title>panier web page </title>
- 
+    <script src="main.js"></script>
   </head>
   <body>
     <header>
@@ -19,28 +19,30 @@
             <div><h1>Precious stones</h1></div>
         </nav>
     </header>
-    <main>
-        <div class="container">
+    <main id="main">
+        <div class="container" id="articl">
             <div class="row"><img src="images.jpeg"></div>
 
-                <div >
-                    <button class="butn" id="img"> j'aime</button>
-                </div>
-                <i class="fa-duotone fa-heart fa-lg"></i>
+            <div class="btn btn-primary" id="img1">
+           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                    <path  d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+          </svg> j'aime
+            </div>
+
             <div class="row">
                 <div>
                     <input type="text" id="qnt" value="1">
-                    <button id="plus">+</button>
+                    <button id="plus" >+</button>
                     <button id="moin">-</button>
                     <input type="text" id="prix" value="10">$
-                    <button type="reset" id="reset">Delete</button>
+                    <button type="reset" id="reset" onclick="delet()">Delete</button>
                 </div>
             </div>
         </div>
-        <div class="container">
+        <div class="container" id="articl1">
             <div class="row"><img src="images (1).jpeg"></div>
 
-            <div class="btn btn-primary" id="img1" onclick="changeColor(red);" >
+            <div class="btn btn-primary" id="img1" >
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
             <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
           </svg> j'aime
@@ -52,14 +54,14 @@
                     <button id="plus1">+</button>
                     <button id="moin1">-</button>
                     <input type="text" id="prix1" value="25">$
-                    <button type="reset" id="reset">Delete</button>
+                    <button type="reset" id="reset1" onclick="delet1()">Delete</button>
                 </div>
             </div>
         </div>
-        <div class="container">
+        <div class="container" id="articl2">
             <div class="row"><img src="images (2).jpeg"></div>
 
-            <div class="btn btn-primary" id="img2">
+            <div class="btn btn-primary" id="img2" onclick="changeColor('red')">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
             <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
           </svg> j'aime
@@ -71,7 +73,7 @@
                     <button id="plus2">+</button>
                     <button id="moin2">-</button>
                     <input type="text" id="prix2" value="30">$
-                    <button type="reset" id="reset2">Delete</button>
+                    <button type="reset" id="reset2" onclick="delet2()" >Delete</button>
                 </div>
             </div>
         </div>
